# uvec-summer-2024

./: Dockerfile  README.md
client/: index.html  package-lock.json  package.json
client/src/: App.css  App.tsx  data.ts  index.css
client/src/components/: Grid.tsx
server/: .gitignore  Cargo.toml
server/src/: dummy.rs  main.rs  types.rs
