[package]
name = "vikeplace"
version = "0.1.0"
edition = "2021"
default-run = "vikeplace"

[[bin]]
name = "vikeplace"
path = "src/main.rs"

[[bin]]
name = "dummyclient"
path = "src/dummy.rs"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
headers = "0.4"
image = "0.25.1"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.0", features = ["full", "time"] }
tokio-tungstenite = "0.21"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
websocket = "0.27.1"
